<resources>
    <string name="app_name">Jewelery</string>
    <string name="title_activity_history">История</string>

    <!--Spinner values.-->
    <string-array name="colors_array">
        <item>Красный</item>
        <item>Жёлтый</item>
        <item>Зелёный</item>
    </string-array>

    <!--Menu items.-->
    <string name="action_history" translatable="false">История</string>
    <string name="action_settings" translatable="false">Настройки</string>
    <string name="title_activity_result">Результаты</string>
    <string name="text_button">Далее</string>
    <string name="text_weight_results_label">Итоговый вес</string>
    <string name="text_ava_weight_results_label">Имеющийся вес</string>
    <string name="text_button_calculate">Посчитать</string>
    <string name="action_clear_history">Очистить</string>
    <string name="title_ava_info">Имеющийся металлы</string>
    <string name="title_activity_main">Имеющийся металл</string>
    <string name="title_desired_result">Желаемый результат</string>
    <string name="text_color_label">Цвет</string>
    <string name="text_proba_label">Проба</string>
    <string name="text_weight_label">Вес</string>
    <string name="title_add_metal">Дополнительный металл</string>

</resources>
