<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.jewelery.MainActivity">


    <TextView
        android:id="@+id/text_ava_metal_title"
        style="@style/TitleText"
        android:text="@string/title_activity_main"
        android:textAppearance="@style/MainText"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ava_color_label"
        style="@style/LabelTextTop"
        android:layout_marginTop="@dimen/text_bot_label_top_margin"
        android:text="@string/text_color_label"
        android:textAppearance="@style/MainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ava_proba_label" />

    <TextView
        android:id="@+id/text_ava_proba_label"
        style="@style/LabelTextTop"
        android:layout_marginTop="@dimen/text_bot_label_top_margin"
        android:text="@string/text_proba_label"
        android:textAppearance="@style/MainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ava_weight_label" />

    <TextView
        android:id="@+id/text_ava_weight_label"
        style="@style/LabelTextTop"
        android:text="@string/text_weight_label"
        android:textAppearance="@style/MainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ava_metal_title" />

    <AutoCompleteTextView
        android:id="@+id/text_ava_proba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MainText"
        app:layout_constraintLeft_toLeftOf="@+id/text_ava_weight"
        app:layout_constraintRight_toRightOf="@+id/text_ava_weight"
        tools:text="750.0"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/text_ava_proba_label"
        app:layout_constraintTop_toTopOf="@+id/text_ava_proba_label"
        />

    <AutoCompleteTextView
        android:id="@+id/text_ava_weight"
        style="@style/RightText"
        android:textAppearance="@style/MainText"
        tools:text="6.0"
        app:layout_constraintBottom_toBottomOf="@+id/text_ava_weight_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_ava_weight_label"
        android:layout_marginRight="32dp"
        app:layout_constraintVertical_bias="0.428" />

    <Spinner
        android:id="@+id/spinner_ava_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_ava_color_label"
        app:layout_constraintRight_toRightOf="@+id/text_ava_proba"
        app:layout_constraintTop_toTopOf="@+id/text_ava_color_label"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/text_ava_proba" />

    <Button
        android:id="@+id/button"
        style="@style/Button"
        android:onClick="startExtraActivity"
        android:text="@string/text_button"
        android:textAppearance="@style/MainText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
