<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/text_desired_results_title"
        android:text="@string/title_desired_result"
        android:textAppearance="@style/MainText"
        style="@style/TitleText"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        />

    <TextView
        android:id="@+id/text_desired_proba_label"
        style="@style/LabelTextTop"
        android:text="@string/text_proba_label"
        android:textAppearance="@style/MainText"
        android:layout_marginTop="@dimen/text_label_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_desired_results_title"
        app:layout_constraintRight_toRightOf="@+id/text_add_proba_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/text_desired_proba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="850"
        android:textColor="@color/secondary_text"
        android:textAppearance="@style/MainText"
        app:layout_constraintTop_toTopOf="@+id/text_desired_proba_label"
        app:layout_constraintBottom_toBottomOf="@+id/text_desired_proba_label"
        app:layout_constraintLeft_toLeftOf="@+id/text_add_proba"
        app:layout_constraintRight_toRightOf="@+id/text_add_proba" />

    <TextView
        android:id="@+id/text_add_metal_title"
        style="@style/TitleText"
        android:text="@string/title_add_metal"
        android:textAppearance="@style/MainText"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_add_proba_label"
        style="@style/LabelTextTop"
        android:text="@string/text_proba_label"
        android:textAppearance="@style/MainText"
        android:layout_marginTop="@dimen/text_bot_label_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_add_weight_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_add_weight_label"
        style="@style/LabelTextTop"
        android:textAppearance="@style/MainText"
        android:text="@string/text_weight_label"
        app:layout_constraintTop_toBottomOf="@+id/text_add_metal_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/text_add_proba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="750"
        android:textColor="@color/secondary_text"
        android:textAppearance="@style/MainText"
        app:layout_constraintTop_toTopOf="@+id/text_add_proba_label"
        app:layout_constraintBottom_toBottomOf="@+id/text_add_proba_label"
        app:layout_constraintVertical_bias="0.576"
        app:layout_constraintLeft_toLeftOf="@+id/text_add_weight"
        app:layout_constraintRight_toRightOf="@+id/text_add_weight" />

    <AutoCompleteTextView
        android:id="@+id/text_add_weight"
        style="@style/RightText"
        android:text="6 "
        android:textColor="@color/secondary_text"
        android:textAppearance="@style/MainText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_add_weight_label"
        app:layout_constraintBottom_toBottomOf="@+id/text_add_weight_label" />

    <TextView
        android:id="@+id/text_desired_color_label"
        style="@style/LabelTextTop"
        android:layout_marginTop="@dimen/text_bot_label_top_margin"
        android:text="@string/text_color_label"
        android:textAppearance="@style/MainText"
        app:layout_constraintTop_toBottomOf="@+id/text_desired_proba_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_calculate"
        style="@style/Button"
        android:text="@string/text_button_calculate"
        android:textAppearance="@style/MainText"
        android:onClick="testResultsLayoutShowing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        />

    <Spinner
        android:id="@+id/spinner_desired_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/text_desired_proba"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/text_desired_proba"
        app:layout_constraintTop_toTopOf="@+id/text_desired_color_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_desired_color_label"
        android:layout_marginBottom="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="320dp" />


</android.support.constraint.ConstraintLayout>