<?xml version="1.0" encoding="utf-8"?>



<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <TextView
            android:id="@+id/text_silver_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="0,64"
            app:layout_constraintLeft_toRightOf="@+id/text_results_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintTop_toTopOf="@+id/text_silver_results_label"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_silver_results_label"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/text_silver_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            tools:text="Добавить серебра"
            app:layout_constraintLeft_toLeftOf="@+id/text_weight_results_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_copper_results_label" />

        <TextView
            android:id="@+id/text_copper_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="0,64"
            app:layout_constraintLeft_toRightOf="@+id/text_results_title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_copper_results_label"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_copper_results_label"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/text_copper_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            tools:text="Убрать меди"
            app:layout_constraintLeft_toLeftOf="@+id/text_weight_results_label"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/text_ava_weight_results_label" />

        <TextView
            android:id="@+id/text_results_title"
            android:layout_width="119dp"
            android:layout_height="34dp"
            android:text="@string/title_activity_result"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.506"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />




        <TextView
            android:id="@+id/text_weight_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15,6 "
            app:layout_constraintLeft_toRightOf="@+id/text_results_title"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_weight_results_label"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="@+id/text_weight_results_label"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_ava_weight_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="6"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintLeft_toRightOf="@+id/text_results_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_ava_weight_results_label"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_ava_weight_results_label"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/text_weight_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_weight_results_label"
            app:layout_constraintRight_toLeftOf="@+id/text_results_title"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_results_title" />

        <TextView
            android:id="@+id/text_ava_weight_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/text_ava_weight_results_label"
            app:layout_constraintLeft_toLeftOf="@+id/text_weight_results_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_weight_results_label" />





</android.support.constraint.ConstraintLayout>

